Revert "añadir mil aulas"
This reverts commit 8f509d76dfd2d6d21dd0025de5c82282a4c08ef7.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="#" onclick="navigateTo('programas')">PROGRAMAS
                             ACADÉMICOS</a></li>
                     <li class="nav-item mt-3 mt-lg-0 ms-lg-4">
-                        <a class="btn-aula-virtual" href="https://aulavirtualciencias.milaulas.com/" target="_blank">
+                        <a class="btn-aula-virtual" href="https://aulavirtual.unica.edu.pe/" target="_blank">
                             AULA VIRTUAL
                         </a>
                     </li>
